# bp-sandbox

./: .gitignore  CMakeLists.txt  README.md  canvas.html  particle_bp.ipynb  requirements.txt
algorithms/: pf.html
app/algorithms/: algos.css  pf.html
app/algorithms/js/: accordion.js
app/assets/: main.css
app/js/: main.js
assets/: main.css
data/: obs.pbm  obs_data.txt
media/: obs.pbm
notebook/: loopy_bp.ipynb
scripts/: make_observation.py
src/: server.cpp  server_utils.h
src/inference/: inference_utils.h  nbp.cpp  nbp.h  particle_filter.cpp  particle_filter.h
src/inference/common/: common_utils.h  inference_utils.h  observation.h  spider_particle.h
src/inference/spider/: observation.h  spider_graph.h  spider_pairwise.h  spider_particle.h  spider_shapes.h
src/inference/utils/: common_utils.h  inference_utils.h  mixture_model.h
src/js/: main.js
src/sim/: graph.py  likelihoods.py  sampling.py  spider.py
